# fb2docker-integration

./: Makefile.am  configure.ac
packaging/: fb2docker-integration.spec.in
policy/: Makefile.am  fb2docker.te
